--- a/src/AssignmentManager.Web/wwwroot/css/shared/layout.scss
+++ b/src/AssignmentManager.Web/wwwroot/css/shared/layout.scss
@@ -146,7 +146,9 @@ main {
             font-weight: 500;
             line-height: 70px;
             color: white;
-            padding: 0 25px 0 25px;
+            padding: 0 65px 0 65px;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             &--left {
                 text-align: left;
